<resources>
    <string name="app_name">우리의숲</string>

    <string name="login_content">같은 취향을 가진 사람들이\n모인 취향 둥지에 모여보세요!</string>
    <string name="login_nest_talk">둥지talk에서\n얘기해!</string>

    <string name="start_kakao_talk">카카오톡으로 시작하기</string>
    <string name="ok">확인</string>
    <string name="register">등록</string>

    <string name="hobby_check_title">당신은\n어떤 취미를 가진\n사람인가요?</string>
    <string name="hobby_check_button_title">거래 내역 연결하고 내 취미 알아보기</string>
    <string name="hobby_no_check_start"><u>연결안하고 바로 시작하기</u></string>
    <string name="hobby_check_content">거래내역을 연결해주시면,\n취미 전문가 ‘우리의 숲\'이\n당신의 취미 취향을 분석해드릴게요!</string>

    <string name="format_recommend_hobby_title">%s님의\n 취미 추출 완료!</string>
    <string name="format_recommend_hobby_content">%s님의 취미는 %s로 추출되었어요.\n가장 관심있는 취미 1가지를 선택해주세요!</string>
    <string name="hobby_recommend_join">나만의 취미 기반 모임, 둥지 가입하러가기</string>
    <string name="share_my_hobby_result">내 취미 결과 공유하기</string>
    <string name="share_kakao">카톡으로 공유하기</string>
    <string name="extract_again">추출 다시하기</string>

    <string name="format_recommend_nest_title">%s님을 위한\n <u>%s</u> 취미 둥지 추천</string>
    <string name="join_nest">둥지 가입하기</string>

    <string name="format_complete_nest_title">%s님\n취미 둥지 가입 완료</string>
    <string name="format_complete_nest_content">%s님 환영합니다.\n취미 둥지에서 행복한 취미 생활하세요!</string>

    <string name="hobby_tip_title">취미생활 꿀팁</string>
    <string name="hobby_tip_content">취미도 건강한 금융생활의 일부!\n취미 자금을 여윳돈으로 미리 준비하면\n건강한 취미 금융생활이 가능해진답니다.</string>
    <string name="tip">🍯tip</string>

    <string name="nest_service_guide_title">취미 용돈모으기\n서비스란?</string>
    <string name="nest_service_guide_content">사고싶은 취미용품이 있다면, 차곡차곡 조금씩 취미 용돈 모으기!\n우리의 숲에서 딱 200일만 같이 모아볼까요?</string>
    <string name="make_save_account">적금 상품 가입 하러 가기</string>
    <string name="register_pocket_money">용돈 모으기 등록</string>

    <string name="pocket_money_register_title">취미 용돈모으기\n가입하기</string>
    <string name="pocket_money_register_content">취미를 위한 용돈을 차곡차곡 모아볼까요?</string>

    <string name="format_item_price">가격 : %d원</string>
    <string name="format_member_count">맴버 %d명</string>

</resources>