<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.HobbyCheckFragment">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_clover" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_clover" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clover" />
            </LinearLayout>

            <mashup.littleforest.wooriforest.ui.customfont.SunflowerBoldTextView
                style="@style/TextStyle.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/hobby_check_title"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_top">

            <TextView
                android:layout_width="280dp"
                android:layout_height="44dp"
                android:background="@drawable/drawable_rect_red_rad_25"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="# 나도 몰랐던 나의 취미"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawable_rect_yellow_rad_25"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="# 이렇게 사소한 것도 취미?!"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                style="@style/TextStyle.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/hobby_check_content"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/btn_no_check_hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/hobby_no_check_start"
                android:textColor="#666666"
                android:textSize="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_check_hobby"
                style="@style/ButtonStyle.Base"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/hobby_check_button_title" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>