<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="32dp"
                android:textStyle="bold" />

            <TextView
                style="@style/TextStyle.Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_content" />

            <FrameLayout
                android:layout_width="360dp"
                android:layout_height="312dp"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="66dp"
                    android:src="@drawable/img_bird" />

                <ImageView
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:layout_gravity="bottom|right"
                    android:layout_marginEnd="-10dp"
                    android:layout_marginBottom="56dp"
                    android:src="@drawable/img_msg" />

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="66dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="7dp"
                    android:background="@drawable/drawable_rect_stroke_black_rad_10"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/login_nest_talk"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="148dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="52dp"
                    android:background="@drawable/drawable_rect_red_rad_25"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="#떡볶이 둥지"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="44dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="18dp"
                    android:layout_marginBottom="108dp"
                    android:background="@drawable/drawable_rect_blue_rad_25"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="#편의점 덕후 둥지"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="44dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="59dp"
                    android:layout_marginBottom="47dp"
                    android:background="@drawable/drawable_rect_black_rad_25"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="#영화 둥지"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_kakao_login"
                style="@style/ButtonStyle.Base"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/start_kakao_talk"
                app:icon="@drawable/ic_login_kakaotalk_24px" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>