<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="mashup.littleforest.wooriforest.data.model.response.LinkTransItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.NestCompleteFragment">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <mashup.littleforest.wooriforest.ui.customfont.SunflowerBoldTextView
                android:id="@+id/tv_title"
                style="@style/TextStyle.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="정아리님의 취미 둥지 가입 완료" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_item_check_36px" />

            <TextView
                android:id="@+id/tv_content"
                style="@style/TextStyle.ItemContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:lineSpacingExtra="4dp"
                android:minWidth="280dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                tools:text="정아리님, 환영합니다. 취미 둥지에서 행복한 취미 생활하세요!" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_top">

            <include
                layout="@layout/item_hobby_nest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:model="@{model}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_hobby_tip">

                <TextView
                    android:id="@+id/tv_tip"
                    android:layout_width="32dp"
                    android:layout_height="14dp"
                    android:background="@drawable/drawable_rect_orange_rad_25"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/tip"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_tip_title"
                    app:layout_constraintEnd_toStartOf="@id/tv_tip_title"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_tip_title" />

                <TextView
                    android:id="@+id/tv_tip_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/hobby_tip_title"
                    android:textColor="@color/orange"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_tip_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_tip"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_tip_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/hobby_tip_content"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_tip_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            style="@style/ButtonStyle.Base"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>