<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <mashup.littleforest.wooriforest.ui.customfont.SunflowerBoldTextView
                style="@style/TextStyle.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nest_service_guide_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/nest_service_guide_content"
                android:textColor="#979797"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_top">

            <ImageView
                android:layout_width="269dp"
                android:layout_height="121dp"
                android:src="@drawable/img_honeytip" />

            <TextView
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:background="@drawable/drawable_rect_red_rad_25"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="# 원하는 취미용품 목표를 정하고,"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/drawable_rect_blue_rad_25"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="#200일동안 매일 꾸준히 저금하면"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/drawable_rect_black_rad_25"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="#어느새 목표 취미 용돈 모으기 완료!"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="같은 둥지 사람들과 서로 응원도 할 수 있어요!"
                android:textColor="@color/black"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:src="@drawable/btn_check_guide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="우리의 숲은 우리은행과 함께합니다."
                android:textColor="#979797"
                android:textSize="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                style="@style/ButtonStyle.Base"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:text="@string/ok" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>